--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-section, body, p {
+/* section, body, p {
   border: solid black 1px;
-  background-color: green;
-}
+  background-color: green; */
+/* } */
 
 nav {
   width: 960px;
@@ -18,7 +18,7 @@ img {
 }
 
 #nav-image {
-  background-color: rgb(204, 40, 40);
+  /* background-color: rgb(204, 40, 40); */
   display: inline-block;
   box-sizing: border-box;
 }
@@ -40,9 +40,45 @@ li {
   display: inline-block;
   padding-left: 40px;
   padding-right: 40px;
-  border: black solid 1px;
+  /* border: black solid 1px; */
+}
+
+
+h2 {
+  float: left;
+  font-size: 2em;
+  margin-top: 15px;
+  padding: 15px;
+  /* border: black solid 1px; */
+}
+
+#bottom-image {
+  float: left;
+}
+
+p {
+  margin-top: 15px;
+  display: inline-block;
+  width: 460px;
+  padding: 15px;
+  font-size: 1.5em;
+}
+
+button{
+  margin-top: 10x;
+  width:275px;
+  height: 50px;
+  border-radius: 15px;
+  
+}
+
+button:hover{
+  background-color: darkgray;
 }
 
 footer {
-  background-color: gray;
+  /* background-color: gray; */
+  height: 80px;
+  width: 100%;
+  margin-top:30px;
 }
